JOGO DO COELHO FINALIZADO

--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="pt-br">
 <head>
-  <!-- bibliotecas -->
-  <script src="./lib/p5.min.js"></script>
-  <script src="./lib/p5.dom.min.js"></script>
-  <script src="./lib/p5.sound.min.js"></script>
-  <script src="./lib/matter.min.js"></script>
-  <script src="./lib/p5.play.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+<!-- bibliotecas -->
+<script src="./lib/p5.min.js"></script>
+<script src="./lib/p5.dom.min.js"></script>
+<script src="./lib/p5.sound.min.js"></script>
+<script src="./lib/matter.min.js"></script>
+<script src="./lib/p5.play.js"></script>
 
-  <!-- classes -->
-  <script src="./js/rope.js"></script>
-  <script src="./js/Ground.js"></script>
-  <script src="./js/Link.js"></script>
+<!-- classes -->
+<script src="./js/rope.js"></script>
+<script src="./js/Ground.js"></script>
+<script src="./js/Link.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <meta charset="utf-8">
+<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
 <body>
-  
-  <script src="sketch.js"></script>
+
+<script src="sketch.js"></script>
 
 </body>
 
